fix bug in collapse form css

--- a/src/Components/FormsContainer/FormsContainer.scss
+++ b/src/Components/FormsContainer/FormsContainer.scss
@@ -19,7 +19,6 @@
   display: flex;
   justify-content: flex-end;
   align-items: center;
-  width: 1.5vw;
   height: 80vh;
   background-color:rgba(228, 226, 226, 0);
   z-index: 3;
